--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
@@ -30,7 +30,7 @@
           </div>
           <div class="amount-time">
             <div class="amount">{{ ultimoMovimiento.costo ? '$' + ultimoMovimiento.costo : '-' }}</div>
-            <div class="time">{{ ultimoMovimiento.fecha | date: 'dd/MM/yyyy' }}</div>
+            <div class="time">{{ ultimoMovimiento.fecha | date: 'dd/MM/yyyy HH:mm' }}</div>
           </div>
         </div>
       </div>
