--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container py-3">
   <div class="row">
-    <div class="col-5">
+    <div class="col-xl-5">
       <app-ventas-dia></app-ventas-dia>
     </div>
-    <div class="col-7">
+    <div class="col-xl-7">
       <mat-card>
         <app-ventas-mensuales></app-ventas-mensuales>
       </mat-card>
@@ -13,10 +13,10 @@
   <br>
 
   <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
       <app-ultimos-movimientos></app-ultimos-movimientos>
     </div>
-    <div class="col-6">
+    <div class="col-md-6">
       <app-productos-stock-limitado></app-productos-stock-limitado>
     </div>
   </div>
@@ -24,13 +24,13 @@
   <br>
 
   <div class="row">
-    <div class="col-4">
+    <div class="col-md-4">
       <app-asistencias-empleados></app-asistencias-empleados>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <app-ultimos-clientes-registrados></app-ultimos-clientes-registrados>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <app-ordenes-de-compra></app-ordenes-de-compra>
     </div>
   </div>
