--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container py-3">
-  <div class="row">
+  <div class="row g-3"> <!-- Agregamos g-3 aquí -->
     <div class="col-xl-5">
       <app-ventas-dia></app-ventas-dia>
     </div>
@@ -12,7 +12,7 @@
 
   <br>
 
-  <div class="row">
+  <div class="row g-3"> <!-- Agregamos g-3 aquí -->
     <div class="col-md-6">
       <app-ultimos-movimientos></app-ultimos-movimientos>
     </div>
@@ -23,7 +23,7 @@
 
   <br>
 
-  <div class="row">
+  <div class="row g-3"> <!-- Agregamos g-3 aquí -->
     <div class="col-md-4">
       <app-asistencias-empleados></app-asistencias-empleados>
     </div>
@@ -34,7 +34,4 @@
       <app-ordenes-de-compra></app-ordenes-de-compra>
     </div>
   </div>
-
-
 </div>
-
