--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -24,13 +24,13 @@
   <br>
 
   <div class="row g-3"> <!-- Agregamos g-3 aquí -->
-    <div class="col-md-4">
+    <div class="col-xl-4">
       <app-asistencias-empleados></app-asistencias-empleados>
     </div>
-    <div class="col-md-4">
+    <div class="col-xl-4">
       <app-ultimos-clientes-registrados></app-ultimos-clientes-registrados>
     </div>
-    <div class="col-md-4">
+    <div class="col-xl-4">
       <app-ordenes-de-compra></app-ordenes-de-compra>
     </div>
   </div>
