--- a/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
+++ b/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
@@ -161,6 +161,11 @@
   color: mediumseagreen;
 }
 
+.leyenda-cta-cte {
+  font-size: 0.7rem;
+  color: #555;
+}
+
 .btnBuscarCointainer {
   display: flex;
 }
