--- a/src/app/modules/gerencia/registrar-arqueo-caja/registrar-arqueo-caja.component.html
+++ b/src/app/modules/gerencia/registrar-arqueo-caja/registrar-arqueo-caja.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
       <p class="titulo">{{esConsulta ? 'Consultar Arqueo de Caja' : 'Registrar Arqueo de Caja'}}</p>
-      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
+      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()" [disabled]="this.data.arqueo.idEstadoArqueo == 2">
         <mat-icon class="editar">edit</mat-icon>
       </button>
     </div>
