--- a/src/app/modules/auth/recuperar-contrasena/recuperar-contrasena.component.html
+++ b/src/app/modules/auth/recuperar-contrasena/recuperar-contrasena.component.html
@@ -15,7 +15,7 @@
             <div class="row" *ngIf="!existeToken">
               <div class="col">
                 <mat-form-field appearance="outline" class="w-100">
-                  <mat-label>Correo electrónico</mat-label>
+                  <mat-label>Email</mat-label>
                   <input type="text" matInput [formControl]="txCorreo"/>
                 </mat-form-field>
                 <app-error-messages [control]="txCorreo"></app-error-messages>
