--- a/src/app/modules/gerencia/registrar-arqueo-caja/registrar-arqueo-caja.component.html
+++ b/src/app/modules/gerencia/registrar-arqueo-caja/registrar-arqueo-caja.component.html
@@ -49,6 +49,18 @@
           <input type="text" matInput [formControl]="txMontoInicial" mask="separator.2" prefix="$ " thousandSeparator="," />
         </mat-form-field>
       </div>
+
+      <div class="col-md">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Responsable</mat-label>
+          <mat-select [formControl]="txResponsable">
+            <mat-option *ngFor="let empleado of listaEmpleados" [value]="empleado.id">
+              {{ empleado.nombre + " " + empleado.apellido }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <app-error-messages [control]="txResponsable"></app-error-messages>
+      </div>
     </div>
   </form>
 
