--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -13,13 +13,27 @@
     <h4 style="color: grey">Filtros de búsqueda</h4>
 
     <form [formGroup]="form">
-      <div class="row pt-4">
+      <div class="row">
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Empleado</mat-label>
+            <mat-label>Nombre</mat-label>
             <input type="text" matInput [formControl]="txNombre"/>
           </mat-form-field>
           <app-error-messages [control]="txNombre"></app-error-messages>
+        </div>
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Usuario</mat-label>
+            <input type="text" matInput [formControl]="txUsuario"/>
+          </mat-form-field>
+          <app-error-messages [control]="txUsuario"></app-error-messages>
+        </div>
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>CUIL</mat-label>
+            <input type="text" matInput [formControl]="txCUIL"/>
+          </mat-form-field>
+          <app-error-messages [control]="txCUIL"></app-error-messages>
         </div>
       </div>
     </form>
