--- a/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
+++ b/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
@@ -23,11 +23,24 @@
               </button>
             </div>
             <div *ngIf="reporte.activo" class="mt-2 row mb-2">
-              <div class="col-8">
-
-              </div>
-              <div class="col-4 justify-content-end d-flex">
-                <button mat-raised-button color="accent" class="btn round mb-4 me-4" (click)="generarReporte(reporte)" id="btnBuscar">Generar reporte</button>
+              <div class="col d-flex">
+                <div class="col-md-4" style="margin-left: 15px">
+                  <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Fecha Desde</mat-label>
+                    <input matInput [matDatepicker]="pickerDesde" [formControl]="txFechaDesde" readonly/>
+                    <mat-datepicker-toggle matSuffix [for]="pickerDesde"></mat-datepicker-toggle>
+                    <mat-datepicker #pickerDesde></mat-datepicker>
+                  </mat-form-field>
+                </div>
+                <div class="col-md-4" style="margin-left: 15px">
+                  <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Fecha Hasta</mat-label>
+                    <input matInput [matDatepicker]="pickerHasta" [formControl]="txFechaHasta" readonly/>
+                    <mat-datepicker-toggle matSuffix [for]="pickerHasta"></mat-datepicker-toggle>
+                    <mat-datepicker #pickerHasta></mat-datepicker>
+                  </mat-form-field>
+                </div>
+                <button mat-raised-button color="accent" class="btn round" style="margin-left: 20px; margin-top: 10px" (click)="generarReporte(reporte)" id="btnBuscar">Generar reporte</button>
               </div>
             </div>
         </div>
