--- a/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
+++ b/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
@@ -22,25 +22,25 @@
                 <mat-icon>{{ reporte.activo ? 'expand_less' : 'expand_more' }}</mat-icon>
               </button>
             </div>
-            <div *ngIf="reporte.activo" class="mt-2 row mb-2">
-              <div class="col d-flex">
-                <div class="col-md-3" style="margin-left: 15px">
-                  <mat-form-field appearance="outline" class="w-100">
-                    <mat-label>Fecha Desde</mat-label>
-                    <input matInput [matDatepicker]="pickerDesde" [formControl]="txFechaDesde" readonly/>
-                    <mat-datepicker-toggle matSuffix [for]="pickerDesde"></mat-datepicker-toggle>
-                    <mat-datepicker #pickerDesde></mat-datepicker>
-                  </mat-form-field>
-                </div>
-                <div class="col-md-3" style="margin-left: 15px">
-                  <mat-form-field appearance="outline" class="w-100">
-                    <mat-label>Fecha Hasta</mat-label>
-                    <input matInput [matDatepicker]="pickerHasta" [formControl]="txFechaHasta" readonly/>
-                    <mat-datepicker-toggle matSuffix [for]="pickerHasta"></mat-datepicker-toggle>
-                    <mat-datepicker #pickerHasta></mat-datepicker>
-                  </mat-form-field>
-                </div>
-                <button mat-raised-button color="accent" class="btn round" style="margin-left: 30px; margin-top: 10px" (click)="generarReporte(reporte)" id="btnBuscar">Generar reporte</button>
+            <div *ngIf="reporte.activo" class="mt-2 row mb-2" style="margin-left: 15px; margin-right: 15px">
+              <div class="col-md-3">
+                <mat-form-field appearance="outline" class="w-100">
+                  <mat-label>Fecha Desde</mat-label>
+                  <input matInput [matDatepicker]="pickerDesde" [formControl]="txFechaDesde" readonly/>
+                  <mat-datepicker-toggle matSuffix [for]="pickerDesde"></mat-datepicker-toggle>
+                  <mat-datepicker #pickerDesde></mat-datepicker>
+                </mat-form-field>
+              </div>
+              <div class="col-md-3">
+                <mat-form-field appearance="outline" class="w-100">
+                  <mat-label>Fecha Hasta</mat-label>
+                  <input matInput [matDatepicker]="pickerHasta" [formControl]="txFechaHasta" readonly/>
+                  <mat-datepicker-toggle matSuffix [for]="pickerHasta"></mat-datepicker-toggle>
+                  <mat-datepicker #pickerHasta></mat-datepicker>
+                </mat-form-field>
+              </div>
+              <div class="col-md-6 mb-2">
+                <button mat-raised-button color="accent" class="btn round btn-generar-reporte" (click)="generarReporte(reporte)" id="btnBuscar">Generar reporte</button>
               </div>
             </div>
         </div>
