--- a/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
+++ b/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
@@ -161,9 +161,10 @@
   color: mediumseagreen;
 }
 
-.leyenda-cta-cte {
+.leyenda {
   font-size: 0.7rem;
   color: #555;
+  opacity: 0.7;
 }
 
 .btnBuscarCointainer {
