--- a/src/app/modules/gerencia/registrar-arqueo-caja/registrar-arqueo-caja.component.html
+++ b/src/app/modules/gerencia/registrar-arqueo-caja/registrar-arqueo-caja.component.html
@@ -3,9 +3,6 @@
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
       <p class="titulo">{{esConsulta ? 'Consultar Arqueo de Caja' : 'Registrar Arqueo de Caja'}}</p>
-      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()" [disabled]="this.data.arqueo.idEstadoArqueo == 2">
-        <mat-icon class="editar">edit</mat-icon>
-      </button>
     </div>
   </div>
 
@@ -28,7 +25,7 @@
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Fecha de Apertura</mat-label>
-          <input matInput [matDatepicker]="pickerApertura" [formControl]="txFechaApertura" [max]="fechaHoy" />
+          <input matInput [matDatepicker]="pickerApertura" [formControl]="txFechaApertura" [min]="fechaHoy" [max]="fechaHoy" />
           <mat-datepicker-toggle matSuffix [for]="pickerApertura"></mat-datepicker-toggle>
           <mat-datepicker #pickerApertura></mat-datepicker>
         </mat-form-field>
@@ -54,7 +51,7 @@
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Responsable</mat-label>
           <mat-select [formControl]="txResponsable">
-            <mat-option *ngFor="let empleado of listaEmpleados" [value]="empleado.id">
+            <mat-option *ngFor="let empleado of listaEmpleados" [value]="empleado.id" [disabled]="empleado.id !== txResponsable.value">
               {{ empleado.nombre + " " + empleado.apellido }}
             </mat-option>
           </mat-select>
