--- a/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
+++ b/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
@@ -16,7 +16,7 @@
     <div class="row pt-4">
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Tarjeta</mat-label>
+          <mat-label>Tarjeta y banco</mat-label>
           <input type="text" matInput [formControl]="txTarjeta"/>
         </mat-form-field>
         <app-error-messages [control]="txTarjeta"></app-error-messages>
