--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.scss
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.scss
@@ -42,3 +42,25 @@
   margin-left: 20px;
   color: #aaa;
 }
+
+.checkbox-container {
+  display: flex;
+  align-items: center; /* Alinea verticalmente el checkbox y el ícono */
+  gap: 8px; /* Espaciado horizontal entre checkbox e ícono */
+}
+
+.info-icon {
+  cursor: pointer;
+  color: grey;
+}
+
+.info-icon:hover {
+  color: #007bff; /* Cambia de color al pasar el mouse */
+}
+
+.leyenda {
+  font-size: 0.7rem;
+  color: #555;
+  opacity: 0.7;
+}
+
