--- a/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
+++ b/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
@@ -40,7 +40,10 @@
                 </mat-form-field>
               </div>
               <div class="col-md-6 mb-2">
-                <button mat-raised-button color="accent" class="btn round btn-generar-reporte" (click)="generarReporte(reporte)" id="btnBuscar">Generar reporte</button>
+                <button *ngIf="!buscandoData" mat-raised-button color="accent" class="btn round btn-generar-reporte" (click)="generarReporte(reporte)" id="btnBuscar">Generar reporte</button>
+                <div class="spinner-wrapper" *ngIf="buscandoData">
+                  <mat-spinner></mat-spinner>
+                </div>
               </div>
             </div>
         </div>
