--- a/src/app/modules/reportes/generar-reportes/generar-reportes.component.scss
+++ b/src/app/modules/reportes/generar-reportes/generar-reportes.component.scss
@@ -42,6 +42,11 @@
   margin-top: 10px;
 }
 
+.btn-generar-reporte-sin-filtro {
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
 
 @media(max-width: 1004px) {
   .btn-generar-reporte {
