--- a/src/app/modules/reportes/generar-reportes/generar-reportes.component.scss
+++ b/src/app/modules/reportes/generar-reportes/generar-reportes.component.scss
@@ -32,6 +32,13 @@
   font-weight: 500;
 }
 
+.subtitulo-reporte {
+  font-size: 12px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  color: #888;
+}
+
 .reporte-container:hover {
   background-color: #f1f0f0;
   cursor: pointer;
